--- a/src/Hangman.css
+++ b/src/Hangman.css
@@ -1,8 +1,9 @@
  .hangman-container{
+    background-color: rgb(250, 230, 205);
     display: flex;
     flex-direction: column;
 
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 
     height: 100vh;
