--- a/src/components/Keyboard.css
+++ b/src/components/Keyboard.css
@@ -1,9 +1,11 @@
 .keyboard-container{
+    width: 600px;
     display: grid;
     grid-template-columns: repeat(7,1fr);
-    grid-column-gap: 2px;
-    grid-row-gap: 2px;
+    grid-column-gap: 10px;
+    grid-row-gap: 20px;
 
+    
 
 }
 
